# kanban-board-app

./: .gitignore  LICENSE  docker-compose.yml
backend/: README.md  pyproject.toml  requirements.txt
backend/app/: database.py  main.py
backend/app/models/: user.py
backend/app/schemas/: __init__.py  task.py  user.py
frontend/: package-lock.json  package.json
frontend/src/: main.tsx
frontend/src/components/: AddColumn.tsx  AddTask.tsx  Board.tsx  Column.tsx  Task.tsx
