[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["JinCheng-27 <jc.tang.mk@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.112.1"
uvicorn = "^0.30.6"
fastapi-cors = "^0.0.6"
sqlalchemy = "^2.0.32"
psycopg2 = "^2.9.9"
alembic = "^1.13.2"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.9"
pyjwt = "^2.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
